k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chatapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chatapp
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rajeshsvrn/chatapp:latest
          ports:
            - containerPort: 80
