k8s/frondend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chatapp
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
