k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chatapp
  labels:
    name: chatapp-ingress
spec:
  rules:
    - host: chat-tws.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend
                port:
                  number: 5001
